Query builders refactoring / rewrite